JumpScript/tests/baselines/reference/parserStrictMode15-negative.errors.txt
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode15-negative.jump(2,8): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode15-negative.jump(2,10): error TS2304: Cannot find name 'b'.


==== tests/cases/conformance/parser/ecmascript5/StrictMode/parserStrictMode15-negative.jump (2 errors) ====
    "use strict";
    delete a[b];
           ~
!!! error TS2304: Cannot find name 'a'.
             ~
!!! error TS2304: Cannot find name 'b'.